2nd Week Challenge No Tests

--- a/Mobflix/app/src/main/res/values/strings.xml
+++ b/Mobflix/app/src/main/res/values/strings.xml
@@ -18,6 +18,8 @@
     <string name="preview">Preview</string>
     <string name="registration">Cadastrar</string>
 
+    <string name="your_category">Sua Categoria Aqui</string>
+
 
     // Test Tags
     // HomeScreen
